* Fixed auth-signatures dialog's layout issues

--- a/pyramus/src/main/webapp/css/application-management-mobile-xl.css
+++ b/pyramus/src/main/webapp/css/application-management-mobile-xl.css
@@ -31,3 +31,8 @@
   height: 64px;
   flex: 0 0 64px;
 }
+
+.signatures-auth-sources {
+  min-width: 420px;
+  max-width: 420px;
+}
